// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > Snapshot testing > should not show label 1`] = `
<div
  class="ds:flex ds:flex-col ds:relative"
>
  <div
    class="ds:flex ds:flex-row ds:relative"
  >
    <div
      class="ds:flex ds:flex-row ds:w-full"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Label"
        class="ds:select-none ds:rounded ds:border ds:w-full ds:border-border-gray ds:bg-white ds:p-5 ds:text-primary-gray ds:disabled:text-inactive-gray ds:flex ds:justify-between ds:items-center"
        data-headlessui-state=""
        id="headlessui-listbox-button-«ra»"
        type="button"
      >
        <span
          class="ds:font-arial ds:text-secondary-gray"
        >
          placeholder text
        </span>
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15.6964L6 9.69639L7.4 8.29639L12 12.8964L16.6 8.29639L18 9.69639L12 15.6964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select > Snapshot testing > should render as disabled 1`] = `
<div
  class="ds:flex ds:flex-col ds:relative"
>
  <label
    class="ds:text-primary-gray ds:text-form-label ds:font-arial ds:mb-4"
    for="«re»"
  >
    Label
  </label>
  <div
    class="ds:flex ds:flex-row ds:relative"
  >
    <div
      class="ds:flex ds:flex-row ds:w-full"
      data-disabled=""
      data-headlessui-state="disabled"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Label"
        class="ds:select-none ds:rounded ds:border ds:w-full ds:border-border-gray ds:bg-white ds:p-5 ds:text-primary-gray ds:disabled:text-inactive-gray ds:flex ds:justify-between ds:items-center"
        data-disabled=""
        data-headlessui-state="disabled"
        disabled=""
        id="headlessui-listbox-button-«rh»"
        type="button"
      >
        <span
          class="ds:font-arial ds:text-secondary-gray"
        >
          placeholder text
        </span>
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15.6964L6 9.69639L7.4 8.29639L12 12.8964L16.6 8.29639L18 9.69639L12 15.6964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select > Snapshot testing > should render with defaults 1`] = `
<div
  class="ds:flex ds:flex-col ds:relative"
>
  <label
    class="ds:text-primary-gray ds:text-form-label ds:font-arial ds:mb-4"
    for="«r0»"
  >
    Label
  </label>
  <div
    class="ds:flex ds:flex-row ds:relative"
  >
    <div
      class="ds:flex ds:flex-row ds:w-full"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Label"
        class="ds:select-none ds:rounded ds:border ds:w-full ds:border-border-gray ds:bg-white ds:p-5 ds:text-primary-gray ds:disabled:text-inactive-gray ds:flex ds:justify-between ds:items-center"
        data-headlessui-state=""
        id="headlessui-listbox-button-«r3»"
        type="button"
      >
        <span
          class="ds:font-arial ds:text-secondary-gray"
        >
          placeholder text
        </span>
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15.6964L6 9.69639L7.4 8.29639L12 12.8964L16.6 8.29639L18 9.69639L12 15.6964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
